# Parallel-Image-Transforms-for-Gigapixel-Images

./: .gitignore  CMakeLists.txt  README.md
Milestone 2 Files/: gpu_kernels.cu  gpu_kernels.cuh  gpu_kernels_stub.cpp  gpu_processor_minimal.cpp  gpu_tile_processor.cpp  gpu_tile_processor.h  gpu_tile_processor_fixed.cpp  gpu_tile_processor_old.cpp  gpu_tile_processor_simple.cpp  m2_test  main.cpp  memory_manager.cpp  memory_manager.h  sequential_processor.cpp  sequential_processor.h  simple_gpu_test.cu  test_cuda.cu  test_minimal.cpp  tile_reader.cpp  tile_reader.h  transforms.h  work_scheduler.cpp  work_scheduler.h
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
build_win_ps/: CMakeCache.txt
src/: common.h  main.cpp  overlap.cpp  overlap.h  tile_processor.cpp  tile_processor.h  tile_writer.cpp  tile_writer.h  transforms.cpp  transforms.h
tools/: gen_test_image.py
